Funtionality in pagination "address"